# factory-thingy

./: Cargo.toml  flake.nix
src/: main.rs  pipeline.rs
src/pipeline/: machine.rs  recipe.rs
